test/conformance/chainsaw/validate/clusterpolicy/standard/enforce-deprecated/csr/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: csr
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: validate-csr
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mutate-csr
  - name: step-02
    try:
    - apply:
        file: csr.yaml
    - assert:
        file: csr-mutated.yaml
